IF(BIICODE)
	ADD_BIICODE_TARGETS()
	IF (UNIX)
	     	IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/Box2D/Testbed")
			find_package(X11 REQUIRED)        		
			if(APPLE)
				FIND_LIBRARY(GLUT_LIBRARY GLUT)
			        FIND_LIBRARY(OpenGL_LIBRARY OpenGL)
            			TARGET_LINK_LIBRARIES(${BII_BLOCK_TARGET} INTERFACE ${GLUT_LIBRARY} ${OpenGL_LIBRARY} ${X11_LIBRARY_DIR})
			else()
  				add_definitions( -D__unix__ -DHAVE_FCNTL_H -DHAVE_GETTIMEOFDAY )
	        		TARGET_LINK_LIBRARIES(${BII_BLOCK_TARGET} INTERFACE pthread X11)
			endif()    	
		ENDIF()
  	ENDIF(UNIX)
	RETURN()
ENDIF(BIICODE)
